tests/ui/errors/auto-impl.member-name.rs
#[fortuples::auto_impl]
#[tuples::member_name(A)]
trait Test {}

fn main() {}
