tests/ui/errors/auto-impl.member-name.stderr
error: `auto_impl` won't use the `member_name`
 --> tests/ui/errors/auto-impl.member-name.rs:2:11
  |
2 | #[tuples::member_name(A)]
  |           ^^^^^^^^^^^
